--- a/resolution.tex
+++ b/resolution.tex
@@ -182,19 +182,19 @@ Table~\ref{tbl:table2} shows the fractional contribution of the deep tropics to 
  \label{tbl:table2}
  \end{table}
 
-To estimate the dilute CAPE values associated with subsiding motion in the deep tropics, temperature and moisture profiles are conditionally sampled depending on whether $\langle \omega \rangle$ is positive or negative, indicating predominantly subsiding or ascending grid columns. The time mean temperature and moisture profiles of subsiding and ascending regions are then used to compute the dilute CAPE used in the ZM scheme, offline. Figure~\ref{fig:cape}a shows the dilute CAPE values associated with mean conditions for ascending, descending and all grid columns in the deep tropics, with resolution. Ascending regions are associated with larger values of dilute CAPE ($>180$ J/kg) relative to subsiding regions ($<110$ J/kg), and the dilute CAPE value computed for mean conditions over the entire deep tropics decreases monotonically with resolution, consistent with the reduction in convective activity with resolution. 
+To estimate the dilute CAPE values associated with subsiding motion in the deep tropics, temperature and moisture profiles are conditionally sampled depending on whether $\langle \omega \rangle$ is positive or negative, indicating predominantly subsiding or ascending grid columns. The time mean temperature and moisture profiles of subsiding and ascending regions are then used to compute the dilute CAPE used in the ZM scheme, offline. Figure~\ref{fig:cape}a shows the dilute CAPE values associated with mean conditions for ascending, descending and all grid columns in the deep tropics, with resolution. Ascending regions are associated with larger values of dilute CAPE ($>180$ J/kg) relative to subsiding regions ($<110$ J/kg), and the dilute CAPE in both regimes decreases monotonically with resolution. 
 
-The space-time weights associated with ascending and descending grid columns in the deep tropics vary drastically with resolution (Figure~\ref{fig:cape}b). The subsiding (ascending) space-time weights change from $0.32$ ($0.68$) at $ne20$, monotonically increasing (decreasing) with resolution to $0.51$ ($0.49$) in $ne120$. The increasing occurrence of stable, subsiding grid columns with resolution results in a reduction in dilute CAPE for the entire deep tropics, verified by the similar values derived through taking the weighted sum of the ascending/descending CAPE values (grey crosses in Figure~\ref{fig:cape}a).
+The space-time weights associated with ascending and descending grid columns in the deep tropics vary drastically with resolution (Figure~\ref{fig:cape}b). The subsiding (ascending) space-time weights change from $0.32$ ($0.68$) at $ne20$, monotonically increasing (decreasing) with resolution to $0.51$ ($0.49$) in $ne120$. It is the increasing occurrence of stable, subsiding grid columns with resolution in addition to the reduction in dilute CAPE for both ascending and descending grid columns with resolution (Figure~\ref{fig:cape}a), that produces a reduction in dilute CAPE for the entire deep tropics, verified by the similar values derived through taking the weighted sum of the ascending/descending dilute CAPE values (grey crosses in Figure~\ref{fig:cape}a).
 
 \begin{figure}
 \begin{center}
 \noindent\includegraphics[width=20pc,angle=0]{figs/temp_cape.pdf}\\
 \end{center}
-\caption{(a) Dilute CAPE computed from time mean temperature and moisture profiles of ascending (red), subsiding (blue) and all grid columns (black) in the deep tropics ($\pm 10^{\circ}$ latitude), and (b) space-time weights of ascending (red) and descending (blue) grid columns in the deep tropics. (c) Dilute CAPE computed for ascending/descending grid columns, but using the mean temperature profile for the entire deep tropics, (d) Same as (c) but using the mean moisture profile for the entire deep tropics. (e) Same as (c) but fixing temperature to the $ne20$ profiles, and (f) same as (d) but fixing moisture to the $ne20$ profile. Grey crosses in (a) are dilute CAPE derived from the sum of the products of space-time weights with the dilute CAPE values of ascending/descending grid columns.}
+\caption{(a) Dilute CAPE computed from time mean temperature and moisture profiles of ascending (red), subsiding (blue) and all grid columns (black) in the deep tropics ($\pm 10^{\circ}$ latitude), and (b) space-time weights of ascending (red) and descending (blue) grid columns in the deep tropics. (c) Dilute CAPE computed for ascending/descending grid columns, but using the mean temperature profile for the entire deep tropics, and (d) Dilute CAPE for ascending/descending regions but fixing moisture to the $ne20$ profile. Grey crosses in (a) are dilute CAPE derived from the sum of the products of space-time weights with the dilute CAPE values of ascending/descending grid columns.}
 \label{fig:cape}
 \end{figure}
 
-Figure~\ref{fig:profiles} shows the time mean temperature and specific humidity profiles of subsiding grid cells in the deep tropics, expressed as anomalies from the mean temperature and specific humidity of the entire deep tropics. The mean profiles of subsiding regions have an anomalous warming layer in the $600-800$ hPa layer and an anomalous moisture deficit throughout the entire column. This warming and drying patterns is consistent with the effects of subsidence, whose motion adiabatically warms the environment while simultaneously advecting drier conditions aloft downward. Both warming and drying the environment oppose the growth of dilute CAPE through reducing parcel buoyancy; warming the environment relative to the temperature of rising air parcels reduces parcel buoyancy \citep{Z2002JGR}, and mixing drier environmental air into rising air parcels reduces the moisture available to warm parcels through latent heating \citep{RB1992JAS}. 
+Figure~\ref{fig:profiles} shows the time mean temperature and specific humidity profiles of subsiding grid cells in the deep tropics, expressed as anomalies from the mean temperature and specific humidity of the entire deep tropics. The mean profiles of subsiding regions have an anomalous warming layer in the $600-800$ hPa layer and an anomalous moisture deficit throughout the entire column. This warming and drying patterns is consistent with the effects of subsidence, whose motion adiabatically warms the environment while simultaneously advecting drier conditions aloft, downward. Both warming and drying the environment oppose the growth of dilute CAPE through reducing parcel buoyancy; warming the environment relative to the temperature of rising air parcels reduces parcel buoyancy \citep{Z2002JGR}, and mixing drier environmental air into rising air parcels reduces the moisture available to warm parcels through latent heating \citep{RB1992JAS}. 
 
 \begin{figure}
 \begin{center}
@@ -204,13 +204,9 @@ Figure~\ref{fig:profiles} shows the time mean temperature and specific humidity 
 \label{fig:profiles}
 \end{figure}
 
-{\color{red}{The next three paragraphs need to be condensed into one or two. Working on it.}}
+An experiment is carried out to unravel the contributions of warming and drying to the large spread in dilute CAPE between ascending/descending grid columns in the deep tropics. Through recomputing dilute CAPE using the mean specific humidity of ascending/descending regions, but setting the temperature profile to the mean profile for the entire deep tropics, one can isolate the contribution of changing moisture to the spread in dilute CAPE in the two regimes, and for each resolution. Doing the reverse then isolates the role of changing temperature profiles. Figure~\ref{fig:cape}c shows the influence of changing moisture on the dilute CAPE of subsiding/ascending regions in the deep tropics. To first order, the large spread in dilute CAPE between subsiding and ascending regions is due to the difference in moisture in subsiding and ascending regions, while temperature differences between the two regimes has a smaller, second order influence (not shown). The large spread in dilute CAPE between ascending/descending regions is crucial for maintaining the relationship in the deep tropics illustrated by the logistic regression, since the much smaller values of dilute CAPE of subsiding grid columns is required to depress dilute CAPE below the threshold for convection.
 
-An experiment is carried out to unravel the contributions of warming and drying to dilute CAPE values of subsiding grid columns. Through recomputing dilute CAPE using the mean specific humidity of subsiding regions in the deep tropics, but setting the temperature profile to the mean profile for the entire deep tropics, one can isolate the role of moisture in subsiding regions on the dilute CAPE calculation. Doing the reverse then isolates the role of temperature in subsiding regions on dilute CAPE. 
-
-Figure~\ref{fig:cape}c shows the influence of moisture on the dilute CAPE of subsiding/ascending regions in the deep tropics, and Figure~\ref{fig:cape}d the influence of temperature. To first order, the large spread in dilute CAPE between subsiding and ascending regions is due to the difference in moisture in subsiding and ascending regions, while temperature differences between the two regimes has a smaller, second order influence on the spread of dilute CAPE. A large spread in dilute CAPE between ascending/descending regions is important for maintaining a strong relationship between subsidence and the activity of the ZM scheme. If the model operated more similar to the fixed moisture experiment (Figure~\ref{fig:cape}d), then subsidence would be associated with larger values of dilute CAPE, and less effective at depressing dilute CAPE below the threshold for convection.
-
-The large spread in dilute CAPE of subsiding/ascending regions combined with the large changes in space-time fraction of subsiding/ascending with resolution are responsible for about half of the change in the dilute CAPE computed for the entire deep tropics. There is also a systematic offset of dilute CAPE values in both subsiding/ascending regions with resolution (Figure~\ref{fig:cape}a) that accounts for another half of the resolution sensitivity. To understand whether moisture or temperature changes with resolution are responsible for this behavior, a similar experiment is performed in which dilute CAPE is recomputed at all resolutions, but fixing the moisture profiles to the lowest resolution $ne20$ profile, and then repeated through fixing only the temperature profile to $ne20$ values. Figure~\ref{fig:cape}e,d shows the influence of the change of resolution on moisture, and the change due to temperature, respectively. The calculation shows that temperature changes with resolution are primarily responsible for the other half of the decrease in dilute CAPE in the deep tropics with resolution. 
+The increasing occurrence of subsiding grid columns accounts for about half of the changes in dilute CAPE in the deep tropics with resolution, the other half being due to the systematic reduction in dilute CAPE for both ascending and descending regions. To isolate whether temperature or moisture contributes to the latter contribution to the changes in dilute CAPE, a similar experiment is performed in which dilute CAPE is recomputed at all resolutions, but fixing the moisture profiles to the lowest resolution $ne20$ profile, and then repeated through fixing only the temperature profile to $ne20$ values. Figure~\ref{fig:cape}d shows the influence of the changing temperature profile with resolution on dilute CAPE of ascending/descending grid columns, and illustrates that the systematic reduction in dilute CAPE with resolution is primarily from changes to the temperature field. Moisture changes with resolution has a smaller influence, only appreciably impacting the dilute CAPE of ascending regions at higher resolutions (not shown).
 
 \subsection{Vertical Velocities and Shallow Convective Precipitation}
 
