--- a/resolution.tex
+++ b/resolution.tex
@@ -148,7 +148,7 @@ To further understand this relationship, a logistic regression between $\langle 
 \begin{equation}
 p = \frac{exp{[b_0 + b_1 x]}}{1 + exp{[b_0 + b_1 x]}}, \label{eq:eq6-3}
 \end{equation}
-where $b_0$ and $b_1$ are the shape parameters of the exponential. The predictor is the instantaneous $\langle f_{d} \rangle \langle \omega_{d} \rangle$ of a grid column, and the predictand the binary $FREQZM$. The assumption is then that subsidence is the independent variable, which the authors believe is reasonable since the environment of subsiding regions is generally more stable than its surroundings, and the ZM scheme is modulated by a stability calculation, dilute CAPE. Grid column regressions that are statistically significant at the $95\%$ level using a log-likelihood test \citep{WILKSBOOK} are retained for analysis. Since the aqua-planets have zonally symmetric boundary conditions, there is a zonally varying structure in the goodness of fit (R-value) and parameter $b_1$ (hereafter referred to as the sensitivity parameter; Figure~\ref{fig:4zonal}a,b).
+where $b_0$ and $b_1$ are the shape parameters of the exponential. The predictor is the instantaneous $\langle f_{d} \rangle \langle \omega_{d} \rangle$ of a grid column, and the predictand the binary $FREQZM$. The assumption is then that subsidence is the independent variable, which the authors believe is reasonable since the environment of subsiding regions is generally more stable than its surroundings, and the ZM scheme is modulated by the dilute CAPE stability metric. Grid column regressions that are statistically significant at the $95\%$ level using a log-likelihood test \citep{WILKSBOOK} are retained for analysis. Since the aqua-planets have zonally symmetric boundary conditions, there is a zonally varying structure in the goodness of fit (R-value) and parameter $b_1$ (hereafter referred to as the sensitivity parameter; Figure~\ref{fig:4zonal}a,b).
 
 \begin{figure}
 \begin{center}
@@ -160,7 +160,9 @@ where $b_0$ and $b_1$ are the shape parameters of the exponential. The predictor
 
 The zonal mean R-values indicate the greatest goodness of fit in the $\pm 10^{\circ}$ latitude band, hereafter referred to as the deep tropics. In this region, the sensitivity parameter is large and negative (Figure~\ref{fig:4zonal}b), consistent with the idea that subsiding motion stabilizes the environment and actively depresses dilute CAPE and the activity of the ZM scheme in the simulations. The sensitivity parameter becomes less negative in the deep tropics with resolution, likely due to the greater magnitude $\langle f_{d} \rangle \langle \omega_{d} \rangle$ with resolution, which requires a lower sensitivity parameter to predict the binary $FREQZM$. The R-values generally decrease with resolution indicating that there is degradation in the relationship with resolution.
 
-Table~\ref{tbl:table2} shows the fractional contribution of the deep tropics to the climatological, global mean change in convective precipitation with resolution. This is a reflection of changes in the partitioning of the Intertropical Convergence Zone (ITCZ) from convective to stratiform precipitation with resolution. The table indicates that a majority ($60-70 \%$) of the reduction in convective precipitation with resolution is from changes within the deep tropics (except in going from $ne20$ to $ne30$, where convective precipitation rates increase due to a wide double-ITCZ in the $ne20$ run that spans well outside of $\pm 10^{\circ}$ latitude, but which is contained within $\pm 10^{\circ}$ latitude in the $ne30$ run). Expanding the latitude boundaries marginally to $\pm 15^{\circ}$, roughly $75\%$ of the changes in convective precipitation with resolution occurs in this region (again, ignoring $ne30-ne20$; Table~\ref{tbl:table2}). Taken together, the region with the largest change in convective precipitation with resolution is also the region where the logistic regression indicates that subsiding motion is most skillful at depressing the activity of the convection scheme.
+\subsubsection{Deep Tropics}
+
+Table~\ref{tbl:table2} shows the fractional contribution of the deep tropics to the climatological, global mean change in convective precipitation with resolution. The table indicates that a majority ($60-70 \%$) of the reduction in convective precipitation with resolution is from changes within the deep tropics (except in going from $ne20$ to $ne30$, where convective precipitation rates increase due to a wide double-ITCZ in the $ne20$ run that spans well outside of $\pm 10^{\circ}$ latitude, but which is contained within $\pm 10^{\circ}$ latitude in the $ne30$ run). Expanding the latitude boundaries marginally to $\pm 15^{\circ}$, roughly $75\%$ of the changes in convective precipitation with resolution occurs in this region (again, ignoring $ne30-ne20$; Table~\ref{tbl:table2}). This trend reflects changes in the partitioning of the Intertropical Convergence Zone (ITCZ) from convective to stratiform precipitation with resolution. Taken together, the region with the largest change in convective precipitation with resolution is also the region where the logistic regression indicates that subsiding motion is most skillful at depressing the activity of the convection scheme.
 
  \begin{table}
  \caption{Fractional contribution of latitude bands $\pm 10^{\circ}$ and $\pm 15^{\circ}$ to changes in global mean precipitation with resolution. The grid headers refer to differences with respect to the next lowest grid resolution, e.g., $ne30 = ne30-ne20$, $ne40=ne40-ne30$, etc... All differences are computed after remapping the data to the $ne20$ grid.}
@@ -184,7 +186,7 @@ Table~\ref{tbl:table2} shows the fractional contribution of the deep tropics to 
 
 To estimate the dilute CAPE values associated with subsiding motion in the deep tropics, temperature and moisture profiles are conditionally sampled depending on whether $\langle \omega \rangle$ is positive or negative, indicating predominantly subsiding or ascending grid columns. The time mean temperature and moisture profiles of subsiding and ascending regions are then used to compute the dilute CAPE used in the ZM scheme, offline. Figure~\ref{fig:cape}a shows the dilute CAPE values associated with mean conditions for ascending, descending and all grid columns in the deep tropics, with resolution. Ascending regions are associated with larger values of dilute CAPE ($>180$ J/kg) relative to subsiding regions ($<110$ J/kg), and the dilute CAPE in both regimes decreases monotonically with resolution. 
 
-The space-time weights associated with ascending and descending grid columns in the deep tropics vary drastically with resolution (Figure~\ref{fig:cape}b). The subsiding (ascending) space-time weights change from $0.32$ ($0.68$) at $ne20$, monotonically increasing (decreasing) with resolution to $0.51$ ($0.49$) in $ne120$. It is the increasing occurrence of stable, subsiding grid columns with resolution in addition to the reduction in dilute CAPE for both ascending and descending grid columns with resolution (Figure~\ref{fig:cape}a), that produces a reduction in dilute CAPE for the entire deep tropics, verified by the similar values derived through taking the weighted sum of the ascending/descending dilute CAPE values (grey crosses in Figure~\ref{fig:cape}a).
+The space-time weights associated with ascending and descending grid columns in the deep tropics vary drastically with resolution (Figure~\ref{fig:cape}b). The subsiding (ascending) space-time weights change from $0.32$ ($0.68$) in the $ne20$ run, monotonically increasing (decreasing) with resolution to $0.51$ ($0.49$) in the $ne120$ run. It is the increasing occurrence of stable, subsiding grid columns with resolution in addition to the reduction in dilute CAPE for both ascending and descending grid columns with resolution (Figure~\ref{fig:cape}a), that produces a reduction in dilute CAPE for the entire deep tropics, verified by the similar values derived through taking the weighted sum of the ascending/descending dilute CAPE values (grey crosses in Figure~\ref{fig:cape}a).
 
 \begin{figure}
 \begin{center}
@@ -194,7 +196,7 @@ The space-time weights associated with ascending and descending grid columns in 
 \label{fig:cape}
 \end{figure}
 
-Figure~\ref{fig:profiles} shows the time mean temperature and specific humidity profiles of subsiding grid cells in the deep tropics, expressed as anomalies from the mean temperature and specific humidity of the entire deep tropics. The mean profiles of subsiding regions have an anomalous warming layer in the $600-800$ hPa layer and an anomalous moisture deficit throughout the entire column. This warming and drying patterns is consistent with the effects of subsidence, whose motion adiabatically warms the environment while simultaneously advecting drier conditions aloft, downward. Both warming and drying the environment oppose the growth of dilute CAPE through reducing parcel buoyancy; warming the environment relative to the temperature of rising air parcels reduces parcel buoyancy \citep{Z2002JGR}, and mixing drier environmental air into rising air parcels reduces the moisture available to warm parcels through latent heating \citep{RB1992JAS}. 
+Figure~\ref{fig:profiles} shows the time mean temperature and specific humidity profiles of subsiding grid cells in the deep tropics, expressed as anomalies from the mean temperature and specific humidity of the entire deep tropics. The mean profiles of subsiding regions have an anomalous warming layer in the $600-800$ hPa layer and an anomalous moisture deficit throughout the entire column. This warming and drying pattern is consistent with the effects of subsidence, whose motion adiabatically warms the environment while simultaneously advecting drier conditions aloft, downward. Both warming and drying the environment oppose the growth of dilute CAPE through reducing parcel buoyancy; warming the environment relative to the temperature of rising air parcels reduces parcel buoyancy \citep{Z2002JGR}, and mixing drier environmental air into rising air parcels reduces the moisture available to warm parcels through latent heating \citep{RB1992JAS}. 
 
 \begin{figure}
 \begin{center}
@@ -204,15 +206,23 @@ Figure~\ref{fig:profiles} shows the time mean temperature and specific humidity 
 \label{fig:profiles}
 \end{figure}
 
-An experiment is carried out to unravel the contributions of warming and drying to the large spread in dilute CAPE between ascending/descending grid columns in the deep tropics. Through recomputing dilute CAPE using the mean specific humidity of ascending/descending regions, but setting the temperature profile to the mean profile for the entire deep tropics, one can isolate the contribution of changing moisture to the spread in dilute CAPE in the two regimes, and for each resolution. Doing the reverse then isolates the role of changing temperature profiles. Figure~\ref{fig:cape}c shows the influence of changing moisture on the dilute CAPE of subsiding/ascending regions in the deep tropics. To first order, the large spread in dilute CAPE between subsiding and ascending regions is due to the difference in moisture in subsiding and ascending regions, while temperature differences between the two regimes has a smaller, second order influence (not shown). The large spread in dilute CAPE between ascending/descending regions is crucial for maintaining the relationship in the deep tropics illustrated by the logistic regression, since the much smaller values of dilute CAPE of subsiding grid columns is required to depress dilute CAPE below the threshold for convection.
+The large spread in dilute CAPE between ascending/descending regions is crucial for maintaining the relationship shown by the logistic regression, since the much smaller values of dilute CAPE of subsiding grid columns is required to depress dilute CAPE below the threshold for convection. To unravel the contributions of warming and drying to this large spread in dilute CAPE between the two regimes, dilute CAPE is recomputed using the mean specific humidity of ascending/descending regions in the deep tropics, but setting the temperature profile to the mean profile for the entire deep tropics. Figure~\ref{fig:cape}c shows this influence of changing moisture on the dilute CAPE of subsiding/ascending regions in the deep tropics, which to first order, explains the large spread in dilute CAPE between the two regimes. Temperature differences between ascending/descending regimes has a smaller, second order influence on the spread in dilute CAPE (not shown).
 
 The increasing occurrence of subsiding grid columns accounts for about half of the changes in dilute CAPE in the deep tropics with resolution, the other half being due to the systematic reduction in dilute CAPE for both ascending and descending regions. To isolate whether temperature or moisture contributes to the latter contribution to the changes in dilute CAPE, a similar experiment is performed in which dilute CAPE is recomputed at all resolutions, but fixing the moisture profiles to the lowest resolution $ne20$ profile, and then repeated through fixing only the temperature profile to $ne20$ values. Figure~\ref{fig:cape}d shows the influence of the changing temperature profile with resolution on dilute CAPE of ascending/descending grid columns, and illustrates that the systematic reduction in dilute CAPE with resolution is primarily from changes to the temperature field. Moisture changes with resolution has a smaller influence, only appreciably impacting the dilute CAPE of ascending regions at higher resolutions (not shown).
 
-\subsection{Vertical Velocities and Shallow Convective Precipitation}
+\subsubsection{Subtropics}
 
-AGCMs are known to suffer from a drizzle bias, producing too much light rain relative to observations \citep{D2006JCLIM}. Figure~\ref{fig:4zonal}d shows the fraction of ZM precipitation $\leq 5$ mm/day in the simulations, which stubbornly persists at 70\% in the region between $10^{\circ}-20^{\circ}$ latitude irrespective of resolution. Focusing in on this drizzle region, Figure~\ref{fig:transect} shows two snapshots of $\omega$ in the longitude-pressure plane at  $\sim 18^{\circ}$ latitude in the $ne30$ simulations, overlain by an isoline delineating where the ZM mass fluxes are quite active. The ZM mass fluxes typically only extend up to about the $800$ hPa level, which often occurs with subsiding motion aloft. 
+Figure~\ref{fig:cape-subt}a shows the dilute CAPE values computed from mean temperature and moisture of subsiding and ascending regions in the $\pm \left( 10^{\circ}-30^{\circ} \right) $ latitude bands, hereafter referred to as the subtropics. The spread in dilute CAPE between ascending and descending grid columns is much smaller than for the deep tropics (Figure~\ref{fig:cape}a), and their dilute CAPE  values vary much less with resolution ($\sim 20$ J/kg, compared with $\sim 80$ J/kg across all resolutions in the deep tropics). The lack of spread in dilute CAPE between ascending/descending regions explains the declining skill in the logistic regression in the subtropics (Figure~\ref{fig:4zonal}a), since without a clear distinction between dilute CAPE of ascending/descending grid columns, subsidence cannot be effective at depressing dilute CAPE below the threshold for convection. There is also no significant changes to the occurrence of subsiding grid columns with resolution; the space-time weights of ascending/descending motion are more-or-less invariant with resolution (Figure~\ref{fig:cape-subt}b).
 
-In drizzling regions, there are opposing influences on dilute CAPE, a global maximum in latent heat fluxes (Figure~\ref{fig:4zonal}c), influencing the thermodynamic state of boundary layer parcels and increasing dilute CAPE from below \citep{Z2002JGR}, and subsidence, which opposes dilute CAPE from above. It seems plausible that these two opposing influences on stability translates into small values of dilute CAPE, but for drizzle to occur, still large enough to trigger the ZM scheme. The ZM scheme, properly a deep convection scheme, is operating as a shallow convection scheme in the $10^{\circ}-20^{\circ}$ latitude region.
+\begin{figure}
+\begin{center}
+\noindent\includegraphics[width=20pc,angle=0]{figs/temp_cape-subtropics.pdf}\\
+\end{center}
+\caption{(a) Dilute CAPE computed from time mean temperature and moisture profiles of ascending (red), subsiding (blue) and all grid columns (black) in the subtropics ($\pm \left(10^{\circ}-30^{\circ} \right)$ latitude bands), and (b) space-time weights of ascending (red) and descending (blue) grid columns in the subtropics. Grey crosses in (a) are dilute CAPE derived from the sum of the products of space-time weights with the dilute CAPE values of ascending/descending grid columns.}
+\label{fig:cape-subt}
+\end{figure}
+
+To understand why dilute CAPE is so insensitive to subsidence, Figure~\ref{fig:transect} shows two snapshots of $\omega$ in the longitude-pressure plane at  $\sim 18^{\circ}$ latitude in the $ne30$ simulations, overlain by an isoline delineating where the ZM mass fluxes are quite active. The ZM mass fluxes typically only extend up to about the $800$ hPa level, which often occurs with subsiding motion aloft. In the $\pm \left(10^{\circ}-20^{\circ} \right)$ latitude bands there are opposing influences on dilute CAPE; a global maximum in surface latent heat fluxes (Figure~\ref{fig:4zonal}c), influencing the thermodynamic state of boundary layer parcels and increasing dilute CAPE from below \citep{Z2002JGR}, and subsidence, which opposes dilute CAPE from above. The shallow convection regime of the ZM scheme depicted in Figure~\ref{fig:transect} is likely a result of these two opposing influences on CAPE, with large the latent heat fluxes increasing dilute CAPE just above the threshold for convection, but with the subsidence restricting dilute CAPE from becoming much larger.
 
 \begin{figure}
 \begin{center}
@@ -222,15 +232,7 @@ In drizzling regions, there are opposing influences on dilute CAPE, a global max
 \label{fig:transect}
 \end{figure}
 
-Figure~\ref{fig:cape-subt} shows the dilute CAPE values computed from mean temperature and moisture of subsiding and ascending regions in the $\pm \left( 10^{\circ}-30^{\circ} \right)$ latitude bands, hereafter referred to as the subtropics. The spread in dilute CAPE between ascending and descending grid columns is much smaller than for the deep tropics (Figure~\ref{fig:cape}a), and the dilute CAPE computed from the mean temperature and moisture over the entire subtropics varies much less with resolution compared with the deep tropics ($\sim 20$ J/kg across all resolutions, compared with $\sim 80$ J/kg across resolutions in the deep tropics). Also unlike the deep tropics, the reduction in dilute CAPE with resolution is not from an increase in occurrence of subsiding grid columns, since the space-time weights of ascending/descending motion are more-or-less invariant with resolution (Figure~\ref{fig:cape-subt}b). The decline in dilute CAPE with resolution in the subtropics is a result of increased stability due to changes in environmental temperature from the larger magnitude downward motion (not shown). This increased stability with resolution is not sufficient to overcome the large latent heat fluxes and mitigate the shallow convection regime of the ZM scheme, consistent with the local minimum in the R-values from the logistic regression in drizzling regions (Figure~\ref{fig:4zonal}a).
-
-\begin{figure}
-\begin{center}
-\noindent\includegraphics[width=20pc,angle=0]{figs/temp_cape-subtropics.pdf}\\
-\end{center}
-\caption{(a) Dilute CAPE computed from time mean temperature and moisture profiles of ascending (red), subsiding (blue) and all grid columns (black) in the subtropics ($\pm \left(10^{\circ}-30^{\circ} \right)$ latitude bands), and (b) space-time weights of ascending (red) and descending (blue) grid columns in the subtropics. Grey crosses in (a) are dilute CAPE derived from the sum of the products of space-time weights with the dilute CAPE values of ascending/descending grid columns.}
-\label{fig:cape-subt}
-\end{figure}
+AGCMs are known to suffer from a drizzle bias, producing too much light rain relative to observations \citep{D2006JCLIM}. Figure~\ref{fig:4zonal}d shows the fraction of ZM precipitation $\leq 5$ mm/day in the simulations, which stubbornly persists at 70\% in the $\pm \left(10^{\circ}-20^{\circ} \right)$ latitude bands, irrespective of resolution, and where the ZM scheme is producing shallow convection. The analysis of dilute CAPE in the subtropics indicates that the prevalence of drizzle is a result of this shallow convection regime of the ZM scheme. While $FREQZM$ does decrease with resolution in drizzling regions (not shown) consistent with the reduction in dilute CAPE in the subtropics (Figure~\ref{fig:cape-subt}a), the larger magnitude subsidence with resolution is unable to impact the impact the drizzling regime of the ZM scheme with resolution.
 
 \subsection{Vertical Velocities and Stratiform Precipitation}
 
