--- a/resolution.tex
+++ b/resolution.tex
@@ -206,9 +206,9 @@ Figure~\ref{fig:profiles} shows the time mean temperature and specific humidity 
 \label{fig:profiles}
 \end{figure}
 
-The large spread in dilute CAPE between ascending/descending regions is crucial for maintaining the relationship shown by the logistic regression, since the much smaller values of dilute CAPE of subsiding grid columns is required to depress dilute CAPE below the threshold for convection. To unravel the contributions of warming and drying to this large spread in dilute CAPE between the two regimes, dilute CAPE is recomputed using the mean specific humidity of ascending/descending regions in the deep tropics, but setting the temperature profile to the mean profile for the entire deep tropics. Figure~\ref{fig:cape}c shows this influence of changing moisture on the dilute CAPE of subsiding/ascending regions in the deep tropics, which to first order, explains the large spread in dilute CAPE between the two regimes. Temperature differences between ascending/descending regimes has a smaller, second order influence on the spread in dilute CAPE (not shown).
+The large spread in dilute CAPE between ascending/descending regions is crucial for maintaining the relationship shown by the logistic regression, since the much smaller values of dilute CAPE of subsiding grid columns is required to depress dilute CAPE below the threshold for convection. To unravel the contributions of warming and drying to this large spread in dilute CAPE between the two regimes, dilute CAPE is recomputed using the mean specific humidity of ascending/descending regions in the deep tropics, but setting the temperature profile to the mean profile for the entire deep tropics. Figure~\ref{fig:cape}c shows this influence of changing moisture on dilute CAPE, which to first order, explains the large spread in dilute CAPE between the ascending/descending regions in the deep tropics. Temperature differences between ascending/descending regimes has a smaller, second order influence on the spread in dilute CAPE (not shown).
 
-The increasing occurrence of subsiding grid columns accounts for about half of the changes in dilute CAPE in the deep tropics with resolution, the other half being due to the systematic reduction in dilute CAPE for both ascending and descending regions. To isolate whether temperature or moisture contributes to the latter contribution to the changes in dilute CAPE, a similar experiment is performed in which dilute CAPE is recomputed at all resolutions, but fixing the moisture profiles to the lowest resolution $ne20$ profile, and then repeated through fixing only the temperature profile to $ne20$ values. Figure~\ref{fig:cape}d shows the influence of the changing temperature profile with resolution on dilute CAPE of ascending/descending grid columns, and illustrates that the systematic reduction in dilute CAPE with resolution is primarily from changes to the temperature field. Moisture changes with resolution has a smaller influence, only appreciably impacting the dilute CAPE of ascending regions at higher resolutions (not shown).
+The increasing occurrence of subsiding grid columns accounts for about half of the changes in dilute CAPE in the deep tropics with resolution, the other half being due to the systematic reduction in dilute CAPE for both ascending and descending regions. To isolate whether temperature or moisture contributes to the latter contributions change in dilute CAPE, dilute CAPE is recomputed for all resolutions, but through fixing the moisture profiles to the lowest resolution $ne20$ profile, and then repeated through fixing only the temperature profile to $ne20$ values. Figure~\ref{fig:cape}d shows the influence of the changing temperature profile with resolution on dilute CAPE of ascending/descending grid columns, and illustrates that the systematic reduction in dilute CAPE with resolution is primarily from changes to the temperature field. Moisture changes with resolution has a smaller influence, only appreciably impacting the dilute CAPE of ascending regions at higher resolutions (not shown).
 
 \subsubsection{Subtropics}
 
@@ -222,7 +222,7 @@ Figure~\ref{fig:cape-subt}a shows the dilute CAPE values computed from mean temp
 \label{fig:cape-subt}
 \end{figure}
 
-To understand why dilute CAPE is so insensitive to subsidence, Figure~\ref{fig:transect} shows two snapshots of $\omega$ in the longitude-pressure plane at  $\sim 18^{\circ}$ latitude in the $ne30$ simulations, overlain by an isoline delineating where the ZM mass fluxes are quite active. The ZM mass fluxes typically only extend up to about the $800$ hPa level, which often occurs with subsiding motion aloft. In the $\pm \left(10^{\circ}-20^{\circ} \right)$ latitude bands there are opposing influences on dilute CAPE; a global maximum in surface latent heat fluxes (Figure~\ref{fig:4zonal}c), influencing the thermodynamic state of boundary layer parcels and increasing dilute CAPE from below \citep{Z2002JGR}, and subsidence, which opposes dilute CAPE from above. The shallow convection regime of the ZM scheme depicted in Figure~\ref{fig:transect} is likely a result of these two opposing influences on CAPE, with large the latent heat fluxes increasing dilute CAPE just above the threshold for convection, but with the subsidence restricting dilute CAPE from becoming much larger.
+To understand why dilute CAPE is so insensitive to subsidence in the subtropics, Figure~\ref{fig:transect} shows two snapshots of $\omega$ in the longitude-pressure plane at  $\sim 18^{\circ}$ latitude in the $ne30$ simulations, overlain by an isoline delineating where the ZM mass fluxes are quite active. The ZM mass fluxes typically only extend up to about the $800$ hPa level, which often occurs with subsiding motion aloft. In the $\pm \left(10^{\circ}-20^{\circ} \right)$ latitude bands there are opposing influences on dilute CAPE; a global maximum in surface latent heat fluxes (Figure~\ref{fig:4zonal}c), influencing the thermodynamic state of boundary layer parcels and increasing dilute CAPE from below \citep{Z2002JGR}, and subsidence, which opposes dilute CAPE from above. The shallow convection regime of the ZM scheme depicted in Figure~\ref{fig:transect} is likely a result of these two opposing influences on CAPE, with large latent heat fluxes increasing dilute CAPE just above the threshold for convection, but with subsidence restricting dilute CAPE from becoming much larger.
 
 \begin{figure}
 \begin{center}
@@ -232,7 +232,7 @@ To understand why dilute CAPE is so insensitive to subsidence, Figure~\ref{fig:t
 \label{fig:transect}
 \end{figure}
 
-AGCMs are known to suffer from a drizzle bias, producing too much light rain relative to observations \citep{D2006JCLIM}. Figure~\ref{fig:4zonal}d shows the fraction of ZM precipitation $\leq 5$ mm/day in the simulations, which stubbornly persists at 70\% in the $\pm \left(10^{\circ}-20^{\circ} \right)$ latitude bands, irrespective of resolution, and where the ZM scheme is producing shallow convection. The analysis of dilute CAPE in the subtropics indicates that the prevalence of drizzle is a result of this shallow convection regime of the ZM scheme. While $FREQZM$ does decrease with resolution in drizzling regions (not shown) consistent with the reduction in dilute CAPE in the subtropics (Figure~\ref{fig:cape-subt}a), the larger magnitude subsidence with resolution is unable to impact the impact the drizzling regime of the ZM scheme with resolution.
+AGCMs are known to suffer from a drizzle bias, producing too much light rain relative to observations \citep{D2006JCLIM}. Figure~\ref{fig:4zonal}d shows the fraction of ZM precipitation $\leq 5$ mm/day in the simulations, which stubbornly persists at 70\% in the $\pm \left(10^{\circ}-20^{\circ} \right)$ latitude bands, irrespective of resolution, and where the ZM scheme is producing shallow convection. The analysis of dilute CAPE in the subtropics indicates that the prevalence of drizzle is a result of this shallow convection regime of the ZM scheme. While $FREQZM$ does decrease with resolution in drizzling regions (not shown) consistent with the reduction in dilute CAPE in the subtropics (Figure~\ref{fig:cape-subt}a), the larger magnitude subsidence with resolution is unable to change the drizzling regime of the ZM scheme with resolution.
 
 \subsection{Vertical Velocities and Stratiform Precipitation}
 
@@ -240,9 +240,9 @@ In contrast to the impact of vertical motion on the ZM scheme, the stratiform sc
 \begin{equation}
 R \approx -\frac{1}{g\rho_{w}} \omega^+ q^+ \label{eq:mflux}
 \end{equation}
-where $\omega^+$ and $q^+$ are the upward $\omega$ and specific humidity $q$ at cloud base, respectively, and $\rho_w$ is the density of rainwater. 
+where $\omega^+$ and $q^+$ are the upward $\omega$ and specific humidity $q$ at cloud base, respectively, with $g$ the acceleration of gravity and $\rho_w$ the density of rainwater. 
 
-Through approximating the cloud base as the $850$ hPa level, equation~\ref{eq:mflux} was found to be a good approximation to total precipitation rates in a regional model \citep{RETAL2016CD} and in the CAM-SE AGCM with CAM5 physics \citep{OETAL2016JAMES}. Figure~\ref{fig:mflux} shows the median convective, stratiform and total precipitation rates conditioned on the $850$ hPa moisture flux using $1$ mm/day bins, in the CAM6 $ne30$ simulation. The figure shows that the moisture flux is a good approximation to the median total precipitation rate, and that the increase in precipitation rates with moisture flux is primarily from the stratiform precipitation scheme. 
+Through approximating the cloud base as the $850$ hPa level, equation~\ref{eq:mflux} was found to be a good approximation to total precipitation rates in a regional model \citep{RETAL2016CD} and in the CAM-SE AGCM with CAM5 physics, across multiple resolutions \citep{OETAL2016JAMES}. Figure~\ref{fig:mflux} shows the median convective, stratiform and total precipitation rates conditioned on the $850$ hPa moisture flux using $1$ mm/day bins, in the CAM6 $ne30$ simulation. The figure shows that the moisture flux is a good approximation to the median total precipitation rate, and that the increase in precipitation rates with moisture flux is primarily from the stratiform precipitation scheme. 
 
 \begin{figure}
 \begin{center}
@@ -252,11 +252,11 @@ Through approximating the cloud base as the $850$ hPa level, equation~\ref{eq:mf
 \label{fig:mflux}
 \end{figure}
 
-The increase in stratiform precipitation rates with resolution is likely due to the increase in magnitude of $\omega$ with resolution. To unravel the contributions of $\omega$ and $q$ at the 850 hPa level, $\omega_{850}$ and $q_{850}$ to the increase in climatological stratiform precipitation with resolution, the area averaged, climatological stratiform precipitation rate $\overline{R_{s}}$ can be decomposed into a double sum of the product of the time mean magnitude $M_s$ and time mean spatial frequency $f_s$, over $\omega_{850}$ and $q_{850}$ space,
+The increase in stratiform precipitation rates with resolution is likely due to the increase in magnitude of $\omega$ with resolution. To unravel the contributions of $\omega$ and $q$ at the 850 hPa level $\omega_{850}$ and $q_{850}$, to the increase in climatological stratiform precipitation with resolution, the area averaged, time mean stratiform precipitation rate $\overline{R_{s}}$ can be decomposed into a double sum of the product of the time mean magnitude $M_s$ and time mean spatial frequency $f_s$, over $\omega_{850}$ and $q_{850}$ space,
 \begin{equation}
 \overline{R_{s}} = \sum_i \sum_j f_s \left( \omega_i , q_j \right) M_s \left( \omega_i , q_j \right) \label{eq:pdecomp}
 \end{equation}
-after \cite{TETAL2018CD}, and the subscript $850$ is dropped from $\omega$ and $q$ for brevity. 
+after \cite{TETAL2018CD}. The subscript $850$ is dropped from $\omega$ and $q$ for brevity. 
 
 Table~\ref{tbl:table2} indicates that the $\pm 15^{\circ}$ latitude band accounts for most of the change in global mean stratiform precipitation with resolution, and so $\overline{R_s}$ is defined as the mean over the $\pm 15^{\circ}$ latitude region. Figure~\ref{fig:pdecomp} is a plot of the terms $M_s \left( \omega_i , q_j \right)$ and $f_s \left( \omega_i , q_j \right) M_s \left( \omega_i , q_j \right)$ for all resolutions,. The plots are computed using 6-hourly instantaneous output of $\omega_{i}$ and $q_{j}$, with 0.05 Pa/s and 0.4 g/kg bins. Values in  $\left( \omega_{i} , q_{j} \right)$ space are only shown for bins with $f_s \geq1 \times 10^{-5}$, a reasonable cut-off to a bins' contribution to $\overline{R_s}$. The $M_s$ plots show that larger magnitude $\omega_{850}$ correspond to larger magnitude time-mean stratiform precipitation rates, and these larger precipitation rates are associated with larger spatial frequencies $f_s \left( \omega_i , q_j \right)$ at higher resolutions. These large magnitude stratiform precipitation rates increasingly contribute to the increase in $\overline{R_{s}}$ with resolution, as seen by the increase in $f_s \left( \omega_i , q_j \right) M_s \left( \omega_i , q_j \right)$ in the larger magnitude $\omega_{850}$ space with resolution. Changes to the time mean spatial frequency of the $q_{850}$ field contributes comparatively much less to changes in stratiform precipitation.
 
